# StatusSpec

./: .gitignore  BUILD.md  CMakeLists.txt  DEVELOP.md  LICENSE  LICENSE.md  README.md  statusspec.vpc
addons/: statusspec.vdf
build_tools/: createstatusspec  createstatusspec.bat  project.vgc
materials/vgui/replay/thumbnails/: critboost.vmt  critboost.vtf  defense_buff_bullet_blue.vmt  defense_buff_bullet_red.vmt  defense_buff_explosion_blue.vmt  defense_buff_explosion_red.vmt  defense_buff_fire_blue.vmt  defense_buff_fire_red.vmt  jarated.vmt  megaheal_blue.vmt  megaheal_blue.vtf  megaheal_red.vmt  megaheal_red.vtf  null.vmt  resist_shield.vmt  resist_shield.vtf  resist_shield_blue.vmt  ubercharge.vmt  ubercharge.vtf
resource/: custommaterials.res  customtextures.res  playermodels.res
resource/ui/: freezeinfo.res  loadouticons.res  mediguninfo.res  mediguninfodynamicmeters.res  medigunpanel.res  statusicon.res  statusspecmediguninfo.res  teamhealthcomparison.res
src/: common.h  entities.cpp  entities.h  enums.h  exceptions.h  funcs.cpp  funcs.h  gamedata.h  glows.cpp  glows.h  hooks.cpp  hooks.h  ifaces.cpp  ifaces.h  itemschema.cpp  itemschema.h  modules.cpp  modules.h  offsets.cpp  offsets.h  paint.cpp  paint.h  player.cpp  player.h  statusspec.cpp  statusspec.h  stdafx.h  tfdefs.cpp  tfdefs.h  vfuncs.cpp  vfuncs.h
src/modules/: antifreeze.cpp  antifreeze.h  cameraautoswitch.cpp  cameraautoswitch.h  camerasmooths.cpp  camerasmooths.h  camerastate.cpp  camerastate.h  cameratools.cpp  cameratools.h  consolemanager.cpp  consolemanager.h  consoletools.cpp  consoletools.h  custommaterials.cpp  custommaterials.h  custommodels.cpp  custommodels.h  customtextures.cpp  customtextures.h  filesystemtools.cpp  filesystemtools.h  fovoverride.cpp  fovoverride.h  freezeinfo.cpp  freezeinfo.h  killstreaks.cpp  killstreaks.h  loadouticons.cpp  loadouticons.h  localplayer.cpp  localplayer.h  mediguninfo.cpp  mediguninfo.h  multipanel.cpp  multipanel.h  playeralias.cpp  playeralias.h  playeraliases.cpp  playeraliases.h  (+18 more)
src/ui/: ImageProgressBar.cpp  ImageProgressBar.h
src/vgui_controls/: ImageProgressBar.cpp  ImageProgressBar.h  VariableLabel.cpp  VariableLabel.h  gameconsoledialog.cpp  gameconsoledialog.h
